--- a/TrickGod.csproj
+++ b/TrickGod.csproj
@@ -19,4 +19,14 @@
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>libs\Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="BRCModdingLib">
+      <HintPath>libs\BRCModdingLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
