--- a/TrickGod.csproj
+++ b/TrickGod.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>net47</TargetFramework>
     <AssemblyName>TrickGod</AssemblyName>
     <Description>My first plugin</Description>
     <Version>1.0.0</Version>
@@ -27,6 +27,15 @@
     <Reference Include="BRCModdingLib">
       <HintPath>libs\BRCModdingLib.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+    <ItemGroup>
+    <None Update="Assembly-CSharp.dll">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="lib\Assembly-CSharp.dll">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
